2005-05-15  Don Allingham  <don@gramps-project.org>
	* src/DisplayModels.py: provide sorting support
	* src/PlaceView.py: add sorting by columns
	* src/SourceView.py: add sorting by columns

2005-05-14  Don Allingham  <don@gramps-project.org>
	* src/ReadGedcom.py: add a few more items to parse from Legacy
	generated GEDCOM files

2005-05-14  Alex Roitman  <shura@gramps-project.org>
	* src/data/Makefile.am: Always install gramps.schemas and gramps.xml,
	with or without packager mode.

2005-05-14  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (IsSiblingOfFilterMatch): Match only sibling,
	not the filterMatch; (HasEvent,HasFamilyEvent): Dont crash in filter
	editor.

	* src/GenericFilter.py (HasTextMatchingSubstringOf, HasTextMatchingRegexpOf):
	Search media objects in full text search.
	* src/RelLib.py: Add GRAMPS ID to get_text_data_list so this field is
	usable in full text search; Dont crash if get_text_data_list contains
	None values instead of empty strings.
	
	* src/EditPerson.py, src/AddMedia.py, src/ImageSelect.py, src/ReportUtils.py,
	src/SelectObject.py, src/plugins/Ancestors.py, src/plugins/IndivComplete.py,
	src/plugins/IndivSummary.py, src/plugins/WebPage.py, src/plugins/WriteCD.py:
	Dont crash with "note only" media object.

2005-05-13  Don Allingham  <don@gramps-project.org>
	* src/plugins/ScratchPad.py: fix GdkAtom index problem with pygtk2.4

2005-05-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/GenericFilter.py (HasEvent,HasFamilyEvent): Correct filter rules

2005-05-13  Alex Roitman  <shura@gramps-project.org>
	* src/DateDisplay.py (DateDisplayEn): Localize format names.

	* src/get_strings: Support extracting strings from tips.xml file.
	* src/build_po: Process tips.xml file.
	* src/TipOfDay.py (TipOfDay.__init__): Use translated tips.
	* src/po/template.po: new translatable strings.

	* src/DateEdit.py (parse_and_check): Display date as parsed on
	focus-out from the entry fields.
