@@ -1,4 +1,5 @@
 2005-05-15  Don Allingham  <don@gramps-project.org>
+	* src/ChooseParents.py: redraw window properly after person add
 	* src/DisplayModels.py: provide sorting support
 	* src/PlaceView.py: add sorting by columns
 	* src/SourceView.py: add sorting by columns
